text links and list for why vegan health

--- a/whyvegan.html
+++ b/whyvegan.html
@@ -92,20 +92,22 @@
                             and we are outraged when anyone hurts a pet, yet research has shown that a pig is more intelligent than 
                             a dog and a cow will call for her baby and search for days, when it's taken away from her. 
                             <br/>
+                            <br/>
                             The animal industry, through advertising, makes us think that the animals are happy, 
                             but many live a short and miserable life, they are bred to be too big, to lay more eggs, 
                             to produce more milk, all of this is detrimental to the animals health.
+                            <br/>
                             <br/>
                             Many people say our animals are killed humanely, yet my personal response is “ if a serial killer gives you for example a drug, 
                             to kill you, do we as a society really think that would be ok? We are not feeling pain? So can they kill us 
                             ecause they feel a physiological need to kill?”
                             <br/>
+                            <br/>
                             If you would like to do some of your own research, I love these 2 guys for their calm approach and 
                             their message and debunking of many of the industry's myths. 
-                            <br/>
-                             <a href="https://www.youtube.com/channel/UCVRrGAcUc7cblUzOhI1KfFg" target="_blank"><span class="sr-only">Earthling Ed</span>Earthling Ed</a>
+                            <a href="https://www.youtube.com/channel/UCVRrGAcUc7cblUzOhI1KfFg" target="_blank"><span class="sr-only">Earthling Ed</span>Earthling Ed</a>
                              and
-                              <a href="https://www.youtube.com/channel/UCGJq0eQZoFSwgcqgxIE9MHw" target="_blank"><span class="sr-only">Mick the Vegan</span>Mick the Vegan</a>
+                            <a href="https://www.youtube.com/channel/UCGJq0eQZoFSwgcqgxIE9MHw" target="_blank"><span class="sr-only">Mick the Vegan</span>Mick the Vegan</a>
                             <br/>
                         </p>
                     </div>
@@ -129,7 +131,57 @@
                     <div class="py-2"><h3>For your Health</h3></div>
                     <div class="py-2 why-text">
                         <p>
-                            Health detail
+                            Did you know that meat is classed by the world health organisation(WHO) as a carcinogenic? 
+                            <br/>
+                            Yet plants have been shown to have many healing properties. 
+                        </p>
+                        <hr>
+                        <p>
+                            Processed meat is currently classed as a class 1 carcinogenic alongside cigarettes and asbestos. 
+                            Class 1 means there is strong evidence it causes cancer, red meats are a class 2A, which means 
+                            they are probable to cause cancer. 
+                            <br/>
+                            But what about milk? Surely we get our calcium from milk, that is what all the adverts years ago told us? 
+                            But did you know that the latest studies show that milk actually leaches calcium from your bones? 
+                            <br/>
+                            <br/>
+                            You can get your calcium from plants
+                            <ul>
+                                <li>green, leafy vegetables – such as broccoli, cabbage and okra, but not spinach</li>
+                                <li>fortified unsweetened soya, rice and oat drinks</li>
+                                <li>calcium-set tofu</li>
+                                <li>sesame seeds and tahini</li>
+                                <li>pulses</li>
+                                <li>brown and white bread (in the UK, calcium is added to white and brown flour by law)</li>
+                                <li>dried fruit, such as raisins, prunes, figs and dried apricots</li>
+                            </ul>
+                            <br/>
+                            And omega 3 well leave the fish to swim in our oceans and eat any of the following
+                            <br/>
+                            <br/>
+                            <ul>
+                                <li>Chia Seeds. Chia seeds are known for their many health benefits, bringing a hefty dose of fiber and protein with each serving</li>
+                                <li>Brussels Sprouts</li>
+                                <li>Algal Oil</li>
+                                <li>Hemp Seed</li>
+                                <li>Walnuts</li>
+                                <li>Flaxseeds</li>
+                                <li>Perilla Oil</li>
+                            </ul> 
+                            Studies are showing that following a healthy plant based lifestyle may help lower blood pressure, 
+                            keep your heart healthy, prevent type 2 diabetes, reduce medications if already type 2 diabetic, 
+                            help you lose weight, reduce your risk of cancer and even help you live longer, all from following a full plant based diet.
+                            <br/>
+                            <br/>
+                            There are many advocates of a vegan lifestyle but if health is your driving notice check out these sites 
+                            <a href="https://nutritionfacts.org/" target="_blank"><span class="sr-only">Dr Michael Greger</span>Dr Michael Greger</a>
+                            and
+                            <a href="https://www.pcrm.org/yourbodyinbalance" target="_blank"><span class="sr-only">Dr Neal Barnard</span>Dr Neal Barnard</a>
+                            , they are a wealth of information from where you can get all your nutrients from to the latest research on how a plant based diet can improve your health
+                            <br/>
+                            <br/>
+                            <small>Please note that although vitamin B12 can be found in nutritional yeast it is advised that you take a vitamin 
+                            B12 supplement to ensure optimal health</small>
                         </p>
                     </div>
                 </div>
