--- a/challenge.html
+++ b/challenge.html
@@ -75,29 +75,29 @@
     <section class="container-fluid" id="frog-outer">
         <div id="frog-pic">
             <div class="row">
-                <div class="col-lg-6 ml-lg-auto">
+                <div class="col-12 col-lg-6 ml-lg-auto">
                     <form class="signup-form">
                         <h2>Challenge Sign-Up</h2>
                         <!-- Label wrap for better spacing -->
                         <label for="fname">
-                            <input class="text-input" id="fname" type="text" placeholder="First Name" name="first_name" required>
+                            <input class="text-input" type="text" placeholder="First Name" name="first_name" required>
                         </label>
                         <br/>
                         <label for="lname">
-                            <input class="text-input" id="lname" type="text" placeholder="Last Name" name="last_name" required>
+                            <input class="text-input" type="text" placeholder="Last Name" name="last_name" required>
                         </label>
                         <br/>
                         <label for="email">
-                            <input class="text-input" id="email" type="email" placeholder="Email Address" name="email_address" required>
+                            <input class="text-input" type="email" placeholder="Email Address" name="email_address" required>
                         </label>
                         <br/>
                         <label for="cemail"> 
-                            <input class="text-input" id="cemail" type="email" placeholder="Confirm Email Address" name="cemail_address" required>
+                            <input class="text-input" type="email" placeholder="Confirm Email Address" name="cemail_address" required>
                         </label>
                         <br/>
                         <label class="comm-option" for="date">Challange Start Date</label>
                         <br/>
-                        <input class="text-input support-option" id="sdate" type="date" name="start_date" required>
+                        <input class="text-input support-option" type="date" name="start_date" required>
                         <br/>
                         <!-- Drop Down Selection for form --> 
                         <label class="comm-option" for="daily">How Often Can we Contact You</label>
