--- a/whyvegan.html
+++ b/whyvegan.html
@@ -50,7 +50,7 @@
               <a class="nav-link" href="whyvegan.html">Why </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="food.html">Recipe </a>
+              <a class="nav-link" href="food.html">Recipes </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="challenge.html">Challenge </a>
