amend whyvegan text to reword

--- a/whyvegan.html
+++ b/whyvegan.html
@@ -163,7 +163,7 @@
                             they are probable to cause cancer. 
                             <br/>
                             But what about milk? Surely we get our calcium from milk, that is what all the adverts years ago told us? 
-                            But did you know that the latest studies show that milk actually leaches calcium from your bones? 
+                            But did you know that the latest studies show that milk can actually pull calcium from your bones? 
                             <br/>
                             <br/>
                             You can get your calcium from plants
@@ -177,7 +177,7 @@
                                 <li>dried fruit, such as raisins, prunes, figs and dried apricots</li>
                             </ul>
                             <br/>
-                            And omega 3 well leave the fish to swim in our oceans and eat any of the following
+                            And for omega 3 we can leave the fish to swim in our oceans and eat any of the following
                             <br/>
                             <br/>
                             <ul>
