removing / works so removing from all recipes

--- a/food.html
+++ b/food.html
@@ -78,7 +78,7 @@
             <div class="col-lg-6"><!-- Mango Chia Pudding -->
                 <div class="row"> 
                     <div class="col-md-4">
-                        <img class="food-pic" src="/assets/images/chia-pudding-unsplash.jpg" alt="Mango Chia Pudding" />
+                        <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="Mango Chia Pudding" />
                     </div>
                     <div class="col-md-8 align-self-center">
                         <a href="assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2>Mango Chia Pudding</h2></a>    
@@ -94,7 +94,7 @@
                         <img class="food-pic" src="assets/images/pancakes-pexels.jpg" alt="Pancakes" />
                     </div>
                     <div class="col-md-8  align-self-center">
-                        <a href="/assets/recipes/pancakes.pdf" target="_blank"><h2>Pancakes</h2></a>    
+                        <a href="assets/recipes/pancakes.pdf" target="_blank"><h2>Pancakes</h2></a>    
                         <div class="food-text">
                             <p>For that luxury feeling that <em>no way is this vegan!!!!</em></p>
                         </div>
@@ -110,7 +110,7 @@
                         <img class="food-pic" src="assets/images/vegan-egg-internet.jpg" alt="Egg Salad Sandwich" />
                     </div>
                     <div class="col-md-8 align-self-center">
-                        <a href="/assets/recipes/egg-salad-sandwich.pdf" target="_blank"><h2>Egg Salad Sandwich</h2></a>    
+                        <a href="assets/recipes/egg-salad-sandwich.pdf" target="_blank"><h2>Egg Salad Sandwich</h2></a>    
                         <div class="food-text">
                             <p>No need to miss your favourite lunch time sandwich</p>
                         </div>
@@ -123,7 +123,7 @@
                         <img class="food-pic" src="assets/images/sundried-tomato-pesto-internet.jpg" alt="Sun-dried Tomato Pesto Hummus" />
                     </div>
                     <div class="col-md-8  align-self-center">
-                        <a href="/assets/recipes/sun-dried-tomato-pesto.pdf" target="_blank"><h2>Sun-dried Tomato Pesto Hummus</h2></a>    
+                        <a href="assets/recipes/sun-dried-tomato-pesto.pdf" target="_blank"><h2>Sun-dried Tomato Pesto Hummus</h2></a>    
                         <div class="food-text">
                             <p>This pesto hummus can be served on a sandwich over pasta or with a beautuful salad</p>
                         </div>
