trying placeholder for challange date

--- a/challenge.html
+++ b/challenge.html
@@ -97,7 +97,7 @@
                         <br/>
                         <label class="comm-option" for="date">Challange Start Date</label>
                         <br/>
-                        <input class="text-input support-option" type="date" name="start_date" required>
+                        <input class="text-input support-option" type="date" placeholder="dd/mm/yyyy" name="start_date" required>
                         <br/>
                         <!-- Drop Down Selection for form --> 
                         <label class="comm-option" for="daily">How Often Can we Contact You</label>
