remove overflow as not good UX

--- a/whyvegan.html
+++ b/whyvegan.html
@@ -145,7 +145,6 @@
                     </div>
                 </div>
             </div>
-            
             <div class="col-sm-4">
                 <div class="d-flex flex-column">
                     <div class="why-pictures" id="rainbow-pic"></div>
@@ -198,7 +197,8 @@
                             <a href="https://nutritionfacts.org/" target="_blank"><span class="sr-only">Dr Michael Greger</span>Dr Michael Greger</a>
                             and
                             <a href="https://www.pcrm.org/yourbodyinbalance" target="_blank"><span class="sr-only">Dr Neal Barnard</span>Dr Neal Barnard</a>
-                            , they are a wealth of information from where you can get all your nutrients from to the latest research on how a plant based diet can improve your health
+                            , they are a wealth of information from where you can get all your nutrients from to the latest research on how a plant based diet can 
+                            improve your health
                             <br/>
                             <br/>
                             <small>Please note that although vitamin B12 can be found in nutritional yeast it is advised that you take a vitamin 
