why page make tablet 1 column not 3

--- a/whyvegan.html
+++ b/whyvegan.html
@@ -75,7 +75,7 @@
             <div class="col-12 d-none d-sm-block"><h1 id="why-h1">So why Go Vegan?</h1></div>
         </div>
         <div class="row no-gutters">
-            <div class="col-sm-4">
+            <div class="col-lg-4">
                 <div class="d-flex flex-column">
                     <div class="why-pictures" id="fox-pic"></div>
                     <div class="py-2"><h3>For the Animals</h3></div>
@@ -113,7 +113,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-lg-4">
                 <div class="d-flex flex-column">
                     <div class="why-pictures" id="nature-pic"></div>
                     <div class="py-2"><h3>For the Planet</h3></div>
@@ -145,7 +145,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-lg-4">
                 <div class="d-flex flex-column">
                     <div class="why-pictures" id="rainbow-pic"></div>
                     <div class="py-2"><h3>For your Health</h3></div>
