add why button to collapse text on animal part only to start

--- a/whyvegan.html
+++ b/whyvegan.html
@@ -86,30 +86,39 @@
                             What makes a horse a pet yet a sheep is a commodity?
                         </p>
                         <hr>
+<!-- Add a button the collapse the text -->                        
                         <p>
-                            Animals are sentient beings, they feel joy and pain, they protect their young and feel 
-                            oss when their babies are taken away from them.  We will spend all our money on making our pets comfortable 
-                            and we are outraged when anyone hurts a pet, yet research has shown that a pig is more intelligent than 
-                            a dog and a cow will call for her baby and search for days, when it's taken away from her. 
-                            <br/>
-                            <br/>
-                            The animal industry, through advertising, makes us think that the animals are happy, 
-                            but many live a short and miserable life, they are bred to be too big, to lay more eggs, 
-                            to produce more milk, all of this is detrimental to the animals health.
-                            <br/>
-                            <br/>
-                            Many people say our animals are killed humanely, yet my personal response is “ if a serial killer gives you for example a drug, 
-                            to kill you, do we as a society really think that would be ok? We are not feeling pain? So can they kill us 
-                            ecause they feel a physiological need to kill?”
-                            <br/>
-                            <br/>
-                            If you would like to do some of your own research, I love these 2 guys for their calm approach and 
-                            their message and debunking of many of the industry's myths. 
-                            <a href="https://www.youtube.com/channel/UCVRrGAcUc7cblUzOhI1KfFg" target="_blank"><span class="sr-only">Earthling Ed</span>Earthling Ed</a>
-                             and
-                            <a href="https://www.youtube.com/channel/UCGJq0eQZoFSwgcqgxIE9MHw" target="_blank"><span class="sr-only">Mick the Vegan</span>Mick the Vegan</a>
-                            <br/>
+                            <button class="btn " type="button" data-toggle="collapse" data-target="#collapsetext" 
+                             aria-expanded="false" aria-controls="collapsetext">
+                                Vegan for the Animals 
+                            </button>
                         </p>
+                        <div class="collapse" id="collapsetext">
+                            <div class="card card-body">
+                                 Animals are sentient beings, they feel joy and pain, they protect their young and feel 
+                                loss when their babies are taken away from them.  We will spend all our money on making our pets comfortable 
+                                and we are outraged when anyone hurts a pet, yet research has shown that a pig is more intelligent than 
+                                a dog and a cow will call for her baby and search for days, when it's taken away from her. 
+                                <br/>
+                                <br/>
+                                The animal industry, through advertising, makes us think that the animals are happy, 
+                                but many live a short and miserable life, they are bred to be too big, to lay more eggs, 
+                                to produce more milk, all of this is detrimental to the animals health.
+                                <br/>
+                                <br/>
+                                Many people say our animals are killed humanely, yet my personal response is “ if a serial killer gives you for example a drug, 
+                                to kill you, do we as a society really think that would be ok? We are not feeling pain? So can they kill us 
+                                because they feel a physiological need to kill?”
+                                <br/>
+                                <br/>
+                                If you would like to do some of your own research, I love these 2 guys for their calm approach and 
+                                their message and debunking of many of the industry's myths. 
+                                <a href="https://www.youtube.com/channel/UCVRrGAcUc7cblUzOhI1KfFg" target="_blank"><span class="sr-only">Earthling Ed</span>Earthling Ed</a>
+                                and
+                                <a href="https://www.youtube.com/channel/UCGJq0eQZoFSwgcqgxIE9MHw" target="_blank"><span class="sr-only">Mick the Vegan</span>Mick the Vegan</a>
+                                <br/>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
