style why button

--- a/whyvegan.html
+++ b/whyvegan.html
@@ -86,9 +86,9 @@
                             What makes a horse a pet yet a sheep is a commodity?
                         </p>
                         <hr>
-<!-- Add a button the collapse the text -->                        
+                        <!-- Add a button to collapse the text -->                        
                         <p>
-                            <button class="btn " type="button" data-toggle="collapse" data-target="#collapsetext" 
+                            <button class="btn" type="button" data-toggle="collapse" data-target="#collapsetext" 
                              aria-expanded="false" aria-controls="collapsetext">
                                 Vegan for the Animals 
                             </button>
