style collapsed button in why page

--- a/whyvegan.html
+++ b/whyvegan.html
@@ -86,13 +86,14 @@
                             What makes a horse a pet yet a sheep is a commodity?
                         </p>
                         <hr>
-                        <!-- Add a button to collapse the text -->                        
-                        <p>
+                        <!-- Add a button to collapse the text for large only-->                        
+                        <p class="d-none d-xl-block">
                             <button class="btn" type="button" data-toggle="collapse" data-target="#collapsetext" 
                              aria-expanded="false" aria-controls="collapsetext">
                                 Vegan for the Animals 
                             </button>
                         </p>
+                        <!-- collapse text only shows if button avaialble so large only--> 
                         <div class="collapse" id="collapsetext">
                             <div class="card card-body">
                                  Animals are sentient beings, they feel joy and pain, they protect their young and feel 
