--- a/whyvegan.html
+++ b/whyvegan.html
@@ -75,7 +75,7 @@
             <div class="col-12 d-none d-sm-block"><h1 id="why-h1">So why Go Vegan?</h1></div>
         </div>
         <div class="row no-gutters">
-            <div class="col-lg-4">
+            <div class="col-xl-4">
                 <div class="d-flex flex-column">
                     <div class="why-pictures" id="fox-pic"></div>
                     <div class="py-2"><h3>For the Animals</h3></div>
@@ -86,14 +86,15 @@
                             What makes a horse a pet yet a sheep is a commodity?
                         </p>
                         <hr>
-                        <!-- Add a button to collapse the text for large only-->                        
+                        <!-- Add a button to collapse the text for x-large only-->                        
                         <p class="d-none d-xl-block">
                             <button class="btn" type="button" data-toggle="collapse" data-target="#collapsetext" 
                              aria-expanded="false" aria-controls="collapsetext">
                                 Vegan for the Animals 
                             </button>
                         </p>
-                        <!-- collapse text only shows if button avaialble so large only--> 
+                        
+                        <!-- collapse text only shows if button avaialble so x-large only--> 
                         <div class="collapse" id="collapsetext">
                             <div class="card card-body">
                                  Animals are sentient beings, they feel joy and pain, they protect their young and feel 
@@ -120,10 +121,35 @@
                                 <br/>
                             </div>
                         </div>
+                        <!-- text not collapsed for all except x-large only--> 
+                        <div class="d-xl-none">
+                                 Animals are sentient beings, they feel joy and pain, they protect their young and feel 
+                                loss when their babies are taken away from them.  We will spend all our money on making our pets comfortable 
+                                and we are outraged when anyone hurts a pet, yet research has shown that a pig is more intelligent than 
+                                a dog and a cow will call for her baby and search for days, when it's taken away from her. 
+                                <br/>
+                                <br/>
+                                The animal industry, through advertising, makes us think that the animals are happy, 
+                                but many live a short and miserable life, they are bred to be too big, to lay more eggs, 
+                                to produce more milk, all of this is detrimental to the animals health.
+                                <br/>
+                                <br/>
+                                Many people say our animals are killed humanely, yet my personal response is “ if a serial killer gives you for example a drug, 
+                                to kill you, do we as a society really think that would be ok? We are not feeling pain? So can they kill us 
+                                because they feel a physiological need to kill?”
+                                <br/>
+                                <br/>
+                                If you would like to do some of your own research, I love these 2 guys for their calm approach and 
+                                their message and debunking of many of the industry's myths. 
+                                <a href="https://www.youtube.com/channel/UCVRrGAcUc7cblUzOhI1KfFg" target="_blank"><span class="sr-only">Earthling Ed</span>Earthling Ed</a>
+                                and
+                                <a href="https://www.youtube.com/channel/UCGJq0eQZoFSwgcqgxIE9MHw" target="_blank"><span class="sr-only">Mick the Vegan</span>Mick the Vegan</a>
+                                <br/>
+                            </div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-xl-4">
                 <div class="d-flex flex-column">
                     <div class="why-pictures" id="nature-pic"></div>
                     <div class="py-2"><h3>For the Planet</h3></div>
@@ -155,7 +181,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-xl-4">
                 <div class="d-flex flex-column">
                     <div class="why-pictures" id="rainbow-pic"></div>
                     <div class="py-2"><h3>For your Health</h3></div>
