fix spelling mistake in challenge page

--- a/challenge.html
+++ b/challenge.html
@@ -95,7 +95,7 @@
                             <input class="text-input" type="email" placeholder="Confirm Email Address" name="cemail_address" required>
                         </label>
                         <br/>
-                        <label class="comm-option" for="date">Challange Start Date</label>
+                        <label class="comm-option" for="date">Challenge Start Date</label>
                         <br/>
                         <input class="text-input support-option" type="date" name="start_date" required>
                         <br/>
