fix issues with 2 recipes not opening pdf

--- a/food.html
+++ b/food.html
@@ -139,7 +139,7 @@
                         <img class="food-pic" src="assets/images/aubergine-chickpea-internet.jpg" alt="Roasted Aubergine & Chickpea Curry" />
                     </div>
                     <div class="col-md-8 align-self-center">
-                        <a href="/assets/recipes/aubergine-chickpea-curry.pdf" target="_blank"><h2>Roasted Aubergine & Chickpea Curry</h2></a>    
+                        <a href="assets/recipes/aubergine-chickpea-curry.pdf" target="_blank"><h2>Roasted Aubergine & Chickpea Curry</h2></a>    
                         <div class="food-text">
                             <p>Roasted Aubergine has the most wonderful flavour, this curry is well worth the effort</p>
                         </div>
@@ -152,7 +152,7 @@
                         <img class="food-pic" src="assets/images/tso-tofu-internet.jpg" alt="Tso Tofu" />
                     </div>
                     <div class="col-md-8  align-self-center">
-                        <a href="/assets/recipes/tso-tofu.pdf" target="_blank"><h2>Tso Tofu</h2></a>    
+                        <a href="assets/recipes/tso-tofu.pdf" target="_blank"><h2>Tso Tofu</h2></a>    
                         <div class="food-text">
                             <p>Tofu never tasted so good, serve with rice for an amazing evening meal</p>
                         </div>
