--- a/whyvegan.html
+++ b/whyvegan.html
@@ -115,9 +115,9 @@
                                 <br/>
                                 If you would like to do some of your own research, I love these 2 guys for their calm approach and 
                                 their message and debunking of many of the industry's myths. 
-                                <a href="https://www.youtube.com/channel/UCVRrGAcUc7cblUzOhI1KfFg" target="_blank"><span class="sr-only">Earthling Ed</span>Earthling Ed</a>
+                                <a href="https://www.youtube.com/channel/UCVRrGAcUc7cblUzOhI1KfFg" target="_blank" rel="noopener"><span class="sr-only">Earthling Ed</span>Earthling Ed</a>
                                 and
-                                <a href="https://www.youtube.com/channel/UCGJq0eQZoFSwgcqgxIE9MHw" target="_blank"><span class="sr-only">Mick the Vegan</span>Mick the Vegan</a>
+                                <a href="https://www.youtube.com/channel/UCGJq0eQZoFSwgcqgxIE9MHw" target="_blank" rel="noopener"><span class="sr-only">Mick the Vegan</span>Mick the Vegan</a>
                                 <br/>
                             </div>
                         </div>
