fixed favicon not showing on live site and updated readme

--- a/whyvegan.html
+++ b/whyvegan.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Why | Lets Go Vegan</title>
-    <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
   </head>
   <body>
     <!--------------------------- Header Section including logo and Navigation -->
