--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Home | Lets Go Vegan</title>
-     <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png">
+     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
   </head>
   <body>
     <!--------------------------- Header Section including logo and Navigation -->
