changed header and link on Why page as not logical and to make user friendly

--- a/whyvegan.html
+++ b/whyvegan.html
@@ -58,21 +58,12 @@
           </ul>
         </div>
       </nav>
-      <div class="container-fluid">
-        <!--Only show on mobile-->
-        <div class="row">
-          <div class="col-12">
-            <a class="nav-head d-sm-none" href="whyvegan.html"
-              ><h1>Lets Go Vegan!</h1>
-            </a>
-          </div>
-        </div>
-      </div>
+      
     </header>
     <!--------------------------- Main section - middle of page -->
     <section class="container-fluid">
         <div class="row no-gutters">
-            <div class="col-12 d-none d-sm-block"><h1 id="why-h1">So why Go Vegan?</h1></div>
+            <div class="col-12"><h1 id="why-h1">So why Go Vegan?</h1></div>
         </div>
         <div class="row no-gutters">
             <div class="col-xl-4"><!-- For the Animals -->
