--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
      <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
   </head>
   <body>
-    <!--------------------------- Header Section including logo and Navigation -->
+    <!------------------------ Header Section including logo and Navigation -->
     <header class="container-fluid">
       <nav class="navbar navbar-expand-sm navbar-light">
-        <a class="navbar-brand mr-auto" href="index.html"
-          ><img
-            src="assets/images/vegan-logo.png"
+        <a class="navbar-brand mr-auto" href="index.html">
+        <img src="assets/images/vegan-logo.png"
             alt="vegan logo"
-            height="75px"
-            width="75px"
+            height="75"
+            width="75"
         /></a>
         <button
           class="navbar-toggler btn btn-secondary"
