fixed paragraph error from validator

--- a/index.html
+++ b/index.html
@@ -14,17 +14,22 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-   
+
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Home | Lets Go Vegan</title>
-     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="assets/images/favicon.png"
+    />
   </head>
   <body>
     <!------------------------ Header Section including logo and Navigation -->
     <header class="container-fluid">
       <nav class="navbar navbar-expand-sm navbar-light">
         <a class="navbar-brand mr-auto" href="index.html">
-        <img src="assets/images/vegan-logo.png"
+          <img
+            src="assets/images/vegan-logo.png"
             alt="vegan logo"
             height="75"
             width="75"
@@ -73,34 +78,49 @@
     </header>
     <!--------------------------- Main section - middle of page -->
     <section class="container-fluid">
-   
-        <div class="d-flex justify-content-center" >
-            <div class="mr-5 d-none d-sm-block together-block"><h2 id="together"><a href="whyvegan.html" >Lets Go Vegan Together</a></h2></div>
-            <div class="ml-sm-5 mr-sm-5" id="pig-pic"><a href="whyvegan.html"> </a></div>
+      <div class="d-flex justify-content-center">
+        <div class="mr-5 d-none d-sm-block together-block">
+          <h2 id="together">
+            <a href="whyvegan.html">Lets Go Vegan Together</a>
+          </h2>
         </div>
-        <!-- set text and button below the picture-->
-        <div class="d-flex justify-content-center flex-column" >
-            <div id="basic-details">
-                <p><b>So are you curious about what going Vegan means?</b><br/><br/>
-                    If you are, you are in the right place.<br/>
-                    We live in a world that is vastly different from our ancestors, 
-                    the modern world bombards us with advertisements, fast foods, quick fixes and the easy path to utopia. 
-                    Yet at the same time it removes us from what really happens to our food, the additives affecting our health, 
-                    the impact to our environment and the cost to the animals we eat.
-                    <br/>
-                    People in all walks of life are going vegan, for the animals, for the environment, for their health. 
-                    Whatever your reason for considering the vegan lifestyle, we can all do our part in improving the world we live in.  
-                    <br/>  
-                    <br/>
-                </p>
-            </div>
-            <div id="center-btn">
-                <a class="btn btn-sm" id="ready-btn" href="challenge.html" role="button">Ready to Start</a>
-            </div>
+        <div class="ml-sm-5 mr-sm-5" id="pig-pic">
+          <a href="whyvegan.html"> </a>
         </div>
-    
-   </section>
-    
+      </div>
+      <!-- set text and button below the picture-->
+      <div class="d-flex justify-content-center flex-column">
+        <div id="basic-details">
+          <p>
+            <b>So are you curious about what going Vegan means?</b><br /><br />
+            If you are, you are in the right place.<br />
+            We live in a world that is vastly different from our ancestors, the
+            modern world bombards us with advertisements, fast foods, quick
+            fixes and the easy path to utopia. Yet at the same time it removes
+            us from what really happens to our food, the additives affecting our
+            health, the impact to our environment and the cost to the animals we
+            eat.
+            <br />
+            People in all walks of life are going vegan, for the animals, for
+            the environment, for their health. Whatever your reason for
+            considering the vegan lifestyle, we can all do our part in improving
+            the world we live in.
+            <br />
+            <br />
+          </p>
+        </div>
+        <div id="center-btn">
+          <a
+            class="btn btn-sm"
+            id="ready-btn"
+            href="challenge.html"
+            role="button"
+            >Ready to Start</a
+          >
+        </div>
+      </div>
+    </section>
+
     <!--------------------------- Footer Section -->
     <footer class="container-fluid">
       <div class="row footer-row">
@@ -114,7 +134,9 @@
         <div class="col-sm-3">
           <ul class="list-inline social-links">
             <li class="list-inline-item">
-              <a href="https://m.youtube.com/playlist?list=PL3D58119F10C2B9A2" target="_blank"
+              <a
+                href="https://m.youtube.com/playlist?list=PL3D58119F10C2B9A2"
+                target="_blank"
                 ><i class="fa fa-youtube" aria-hidden="true"></i>
                 <span class="sr-only">YouTube</span></a
               >
@@ -136,8 +158,11 @@
       </div>
     </footer>
 
-<!--------------------------- Required for Bootstrap JS & keep all scripts together -->
-    <script src="https://kit.fontawesome.com/15a3b949c3.js" crossorigin="anonymous"></script>
+    <!--------------------------- Required for Bootstrap JS & keep all scripts together -->
+    <script
+      src="https://kit.fontawesome.com/15a3b949c3.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
